# cpptensor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_all_benchmarks.sh
benchmarks/: CMakeLists.txt  avx2_bench.cpp  avx512_bench.cpp  cpu_bench.cpp  cuda_bench.cu
docs/: HowToAddNewOpsWithKernel.md  Ops_Status.md  PerformanceComparisonOps.md  TensorViews.md
examples/: CMakeLists.txt  tensor_example.cpp
include/cppgrad/autograd/: autogradmeta.hpp  function.hpp
include/cppgrad/backend/: backend_loader.hpp  cpu_backend.h  cuda_backend.hpp
include/cppgrad/backend/isa/: avx2.hpp  avx512.hpp  isaDetect.hpp
include/cppgrad/dispatcher/: kernelRegistry.h
include/cppgrad/ops/: add.hpp  div.hpp  exp.hpp  helperOps.hpp  mul.hpp  neg.hpp  pow.hpp  sub.hpp
include/cppgrad/tensor/: tensor.hpp  tensorimpl.hpp
include/cppgrad/utils/: broadcastUtils.hpp
include/cppgrad/visualizer/: visualizer.hpp
include/cpptensor/autograd/: function.hpp
include/cpptensor/backend/: backend_loader.hpp  cpu_backend.h  cuda_backend.hpp
include/cpptensor/backend/isa/: avx2.hpp  avx512.hpp  isaDetect.hpp
include/cpptensor/dispatcher/: kernelRegistry.h
include/cpptensor/enums/: dispatcherEnum.h
include/cpptensor/ops/: add.hpp  cos.hpp  exp.hpp  helperOps.hpp  log.hpp  mul.hpp  pow.hpp  sigmoid.hpp  sqrt.hpp
include/cpptensor/ops/activation/: relu.hpp
include/cpptensor/ops/arithmetic/: div.hpp  neg.hpp  sub.hpp
include/cpptensor/ops/linearAlgebra/: dot.hpp  eig.hpp  svd.hpp  tensordot.hpp
include/cpptensor/ops/math/: abs.hpp  log.hpp  matmul.hpp  sin.hpp  tan.hpp
include/cpptensor/ops/reduction/: max.hpp  mean.hpp  min.hpp  sum.hpp
include/cpptensor/tensor/: tensor.hpp  tensorimpl.hpp  tensorutils.hpp
include/cpptensor/utils/: broadcastUtils.hpp
src/autograd/: autogradmeta.cpp  function.cpp
src/backend/: backend_loader.cpp  cpu_backend.cpp  cuda_backend.cu
src/backend/isa/: avx2.cpp  avx512.cpp  isaDetect.cpp
src/dispatcher/: kernelRegistry.cpp
src/ops/: abs.cpp  add.cpp  cos.cpp  div.cpp  exp.cpp  helperOps.cpp  log.cpp  mul.cpp  neg.cpp  pow.cpp  relu.cpp  sigmoid.cpp  sin.cpp  sqrt.cpp  sub.cpp  tan.cpp
src/ops/activation/: relu.cpp  sigmoid.cpp
src/ops/arithmetic/: add.cpp  div.cpp  mul.cpp  neg.cpp  pow.cpp  sub.cpp
src/ops/linearAlgebra/: dot.cpp  eig.cpp  svd.cpp  tensordot.cpp
src/ops/math/: abs.cpp  cos.cpp  exp.cpp  log.cpp  matmul.cpp  sin.cpp  sqrt.cpp  tan.cpp
src/ops/reduction/: max.cpp  mean.cpp  min.cpp  sum.cpp
src/tensor/: tensor.cpp  tensorimpl.cpp  tensorutils.cpp
src/utils/: broadcastUtils.cpp
src/visualizer/: visualizer.cpp
test/: CMakeLists.txt  test_autograd.cpp  test_tensor.cpp
